attempt fix loved ones background on mobile

--- a/resources/css/loved-ones.css
+++ b/resources/css/loved-ones.css
@@ -53,6 +53,10 @@ nav a:visited {
 
 
 @media only screen and (max-width:720px) {
+    body {
+        background-size: 100%;
+    }
+    
     header {
         align-items: center;
     }
@@ -92,9 +96,6 @@ main {
 .pearl,
 .halo {
     width: 10rem;
-}
-
-.pet {
 }
 
 .pet img {
